bin_SCRIPTS = locarna.pl mlocarna locarnate locarna-motif-scan \
	      plot-bmprobs gen-reliab-dot.pl reliability-profile.pl aln2fa.pl \
	      realign-all.pl revisit-RNAz-hits.pl predict-and-plot.pl \
	      RNAz.pm LocARNA_RNAz.pm
EXTRA_DIST =  locarna.pl mlocarna.in locarnate.in locarna-motif-scan \
              plot-bmprobs gen-reliab-dot.pl reliability-profile.pl aln2fa.pl \
	      realign-all.pl revisit-RNAz-hits.pl predict-and-plot.pl \
	      RNAz.pm LocARNA_RNAz.pm